# HW5-NW-takasuka

./: README.md  main.py  pyproject.toml
align/: align.py
test/: test_align.py
